@@ -236,24 +236,26 @@ static const string glacierProps[] =
 {
     "Router.AcceptCert",
     "Router.AllowCategories",
-    "Router.Client.BatchSleepTime",
     "Router.Client.Endpoints",
+    "Router.Client.ForwardContext",
+    "Router.Client.SleepTime",
     "Router.Client.ThreadPool.Size",
     "Router.Client.ThreadPool.SizeMax",
     "Router.Client.ThreadPool.SizeWarn",
-    "Router.Client.ForwardContext",
+    "Router.Client.Throttle.Twoways",
     "Router.Endpoints",
     "Router.ThreadPool.Size",
     "Router.ThreadPool.SizeMax",
     "Router.ThreadPool.SizeWarn",
     "Router.Identity",
     "Router.PrintProxyOnFd",
-    "Router.Server.BatchSleepTime",
     "Router.Server.Endpoints",
+    "Router.Server.ForwardContext",
+    "Router.Server.SleepTime",
     "Router.Server.ThreadPool.Size",
     "Router.Server.ThreadPool.SizeMax",
     "Router.Server.ThreadPool.SizeWarn",
-    "Router.Server.ForwardContext",
+    "Router.Server.Throttle.Twoways",
     "Router.SessionManager",
     "Router.Trace.Client",
     "Router.Trace.RoutingTable",
